Updated homepage font styles

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<!-- Homepage version 4 -->
+<!-- Homepage 2013 -->
 
 <head>
 	<meta charset="utf-8" />
@@ -17,7 +17,7 @@
   <link rel="stylesheet" type="text/css" media="all" href="./css/960.css" />
   <link rel="stylesheet" type="text/css" media="all" href="./css/site.css" />-->
 
-<script src="http://use.edgefonts.net/bebas-neue.js"></script> 
+<script src="http://use.edgefonts.net/bebas-neue;podkova;kelly-slab.js"></script>
 
 <style type="text/css">
 
@@ -27,10 +27,22 @@ body {
   background-image: none;
 }
 
+p, li {
+  font-family: podkova, serif;
+  line-height: 1.15em;
+}
+
 h1 {
   color: #FDAB47;
-  font: bold 4em bebas-neue, sans-serif;
+  font: bold 4em kelly-slab, sans-serif;
   text-transform: uppercase;
+  letter-spacing: -0.05em;
+}
+
+h2 {
+  color: #FFF;
+  font: 2em bebas-neue, sans-serif;
+  text-transform: capitalize;
 }
 
 /* check out http://tympanus.net/codrops/2013/08/06/creative-link-effects/ */
@@ -42,7 +54,7 @@ a:hover { text-decoration: underline; }
 
 nav ul li {
   color: #fff;
-  font: 3em 'Arial Black', sans-serif;
+  font: bold 3em kelly-slab, 'Arial Black', Helvetica, sans-serif;
   -webkit-text-stroke: 2px rgba(0, 0, 0, 0.1);
   -webkit-font-smoothing:antialiased;
 }
